force-app/main/default/objects/Telework_Agreement__c/Telework_Agreement__c.object-meta.xml
<CustomObject>
    <label>Telework Agreement</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Telework Agreement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telework Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>