force-app/main/default/objects/Telework_Agreement__c/fields/Alternate_Work_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Work_Site_Type__c</fullName>
    <label>Alternate Work Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Alternative Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>