force-app/main/default/objects/Telework_Agreement__c/fields/Alternative_Work_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Work_Site_Address__c</fullName>
    <label>Alternative Work Site Address</label>
    <type>TextArea</type>
</CustomField>