force-app/main/default/objects/Telework_Agreement__c/fields/Approved_Telework_days_per_week__c.field-meta.xml
<CustomField>
    <fullName>Approved_Telework_days_per_week__c</fullName>
    <label>Approved Telework days per week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>