force-app/main/default/objects/Telework_Agreement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Telework Agreements</relationshipLabel>
    <relationshipName>Telework_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>