force-app/main/default/objects/Telework_Agreement__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Requesting</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Telework_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>