force-app/main/default/objects/Telework_Agreement__c/fields/Equipment_Request__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Request</label>
    <type>Checkbox</type>
</CustomField>