force-app/main/default/objects/Telework_Agreement__c/fields/Previously_Rejected_Flag__c.field-meta.xml
<CustomField>
    <fullName>Previously_Rejected_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this Request Previously Rejected?</description>
    <label>Previously Rejected Flag</label>
    <type>Checkbox</type>
</CustomField>