force-app/main/default/objects/Telework_Agreement__c/fields/Reasonable_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Accommodation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reasonable Accommodation</label>
    <type>Checkbox</type>
</CustomField>