force-app/main/default/objects/Telework_Agreement__c/fields/Telework_Day_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Telework_Day_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telework Day Thursday</label>
    <type>Checkbox</type>
</CustomField>