force-app/main/default/objects/Telework_Agreement__c/fields/Telework_Day_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Telework_Day_Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telework Day Wednesday</label>
    <type>Checkbox</type>
</CustomField>